fixed spacing

--- a/Battle of the CUNYs/src/css/Home.css
+++ b/Battle of the CUNYs/src/css/Home.css
@@ -59,7 +59,6 @@
     align-items: center;
     padding: 0.2rem;
     border-radius: 5px;
-    margin-bottom: 2rem;
 }
 
 #myProgress {
@@ -94,7 +93,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: start;
-    margin-right: 40vw;
+    margin-right: 25vw;
 }
 .col-con {
     display: flex;
